resources/ts/components/AgentList.module.css
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.agentList {
  animation: fadeIn 200ms ease-in-out;
  display: flex;
  flex-direction: column;
  position: relative;
  row-gap: var(--spacing-base);

  &::before {
    background-color: var(--color-arrow);
    content: "";
    height: calc(
      var(--width-border-dashboard-box) + 100% - var(--height-agent) -
        calc(0.5 * var(--thickness-arrow))
    );
    left: calc(-1 * var(--spacing-base));
    pointer-events: none;
    position: absolute;
    top: calc(var(--width-border-dashboard-box) + 0.5 * var(--height-agent));
    transform: translate3d(-100%, 0, 0);
    width: var(--thickness-arrow);
  }
}

.agentList__agent {
  align-items: center;
  background-color: linen;
  border: 2px solid var(--color-border);
  column-gap: var(--spacing-base);
  display: grid;
  grid-template-areas:
    "issues model status"
    "issues metadata metadata";
  grid-template-columns: 6fr 6fr 5fr;
  height: var(--height-agent);
  padding: 0 var(--spacing-base);
  position: relative;
  row-gap: var(--spacing-base);

  &::after,
  &::before {
    content: "";
    pointer-events: none;
  }

  &::before {
    background-color: var(--color-arrow);
    height: var(--thickness-arrow);
    left: -6px;
    position: absolute;
    top: calc(0.5 * var(--height-agent));
    transform: translate3d(-100%, -50%, 0);
    width: calc(var(--spacing-base) - 4px);
  }

  &:first-of-type::before {
    width: calc(var(--spacing-2x) - 4px);
  }

  &::after {
    border-color: transparent transparent transparent var(--color-arrow);
    border-style: solid;
    border-width: 5px 0 5px 10px;
    height: 0px;
    left: -2px;
    position: absolute;
    top: calc(0.5 * var(--height-agent));
    transform: translate3d(-100%, -50%, 0);
    width: 0px;
  }
}

.agentList__agent.agentList__agentHasErrors {
  border-color: crimson;
}

.agentList__agent__download {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-direction: row;
  gap: var(--spacing-half);
  grid-area: model;

  img {
    height: 1em;
    width: 1em;
  }

  progress {
    width: 100%;
  }
}

.agentList__agent__issues {
  display: grid;
  grid-area: issues;
  grid-template-rows: repeat(2, 24px);
  justify-items: flex-start;
  row-gap: var(--spacing-base);
}

.agentList__agent__issues__list {
  align-self: flex-start;
  display: flex;
  flex-direction: row;
  gap: var(--spacing-half);
}

.agentList__agent__metadata {
  align-self: flex-start;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: var(--spacing-half);
  grid-area: metadata;
}

.agentList__agent__model {
  align-items: center;
  align-self: flex-end;
  display: grid;
  grid-area: model;
  justify-items: flex-start;
}

.agentList__agent__model__name {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.agentList__agent__name {
  align-self: flex-end;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.agentList__agent__status {
  align-self: flex-end;
  grid-area: status;
  width: 100%;
}

